--- a/.env.example
+++ b/.env.example
@@ -4,23 +4,21 @@
 WORKERS=100
 
 # Telegram app ID
-APP_ID=
+APP_ID=22582906
 
 # Telegram app hash
-APP_HASH=
+APP_HASH=e3096dde3e27c72a50e0e53d8ab23d6a
 
 # Telegram bot token
-BOT_TOKEN=
+BOT_TOKEN=7792422730:AAFNExtoVCW9XnAOODLCbdwFruZw9j4-Bgw
 
 # Owner ID, comma-separated
-OWNER=
+OWNER=5282274756
 
 # List of authorized users, comma-separated
 AUTHORIZED_USER=
 
-# Database connection address, i.e. mysql+pymysql://user:pass@mysql/dbname
-DB_DSN=mysql+pymysql://ytdlbot:your_password@mysql/ytdlbot
-
+# Database connection address, i.e. mongodb+srv://bibekkumarmahato0:<db_password>@moviebotcluster.nj5hrdv.mongodb.net/?retryWrites=true&w=majority&appName=MovieBotCluster
 # Redis host, leave it empty to use fakeredis
 REDIS_HOST=redis
 
